--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ requests==2.32.5
 soupsieve==2.8.1
 typing_extensions==4.15.0
 urllib3==2.6.2
-yt-dlp==2025.12.8
+pytubefix==2024.10.18
 mutagen==1.47.0
 python-dateutil==2.8.2
 colorlog==6.8.2
